[gd_scene load_steps=10 format=3 uid="uid://yaxw20rtcrx6"]

[ext_resource type="Script" uid="uid://cfglo7tbpb5t6" path="res://Scenes/Game_menu.gd" id="1_bfodu"]
[ext_resource type="Texture2D" uid="uid://dlcpckdt26rft" path="res://Assets/Level_Buttons/png/Button.png" id="2_8e0mt"]
[ext_resource type="FontFile" uid="uid://c4bd0shxklwqr" path="res://Assets/Fonts/LIQUIDISMPART2.TTF" id="3_08jpk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bpi0q"]
atlas = ExtResource("2_8e0mt")
region = Rect2(3093, 101, 181, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmyb1"]
atlas = ExtResource("2_8e0mt")
region = Rect2(3297, 101, 181, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_myy0f"]
atlas = ExtResource("2_8e0mt")
region = Rect2(1142, 972, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjs17"]
atlas = ExtResource("2_8e0mt")
region = Rect2(1346, 972, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8tnp"]
atlas = ExtResource("2_8e0mt")
region = Rect2(2148, 1408, 181, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_stj27"]
atlas = ExtResource("2_8e0mt")
region = Rect2(2557, 1408, 181, 190)

[node name="Control" type="Control"]
z_index = 100
layout_mode = 3
anchor_right = 0.21
anchor_bottom = 0.231
offset_right = 73.8
offset_bottom = 38.52
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bfodu")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 518.0
offset_bottom = 317.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 180
theme_override_constants/margin_top = 85

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0.121569, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.98144, 0.246149, 0, 1)
theme_override_font_sizes/font_size = 21
text = "     You Lost..."

[node name="Restart" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Restart_Btn" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer/Restart"]
custom_minimum_size = Vector2(20.39, 20)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_bpi0q")
texture_pressed = SubResource("AtlasTexture_vmyb1")
ignore_texture_size = true
stretch_mode = 0

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Restart"]
layout_mode = 2
theme_override_colors/font_color = Color(0.996157, 0, 0.543319, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_08jpk")
theme_override_font_sizes/font_size = 21
text = "Replay  Level"

[node name="Main Menu" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Main_Menu_Btn" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer/Main Menu"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_myy0f")
texture_pressed = SubResource("AtlasTexture_sjs17")
ignore_texture_size = true
stretch_mode = 0

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Main Menu"]
layout_mode = 2
theme_override_colors/font_color = Color(0.994932, 0.804464, 0.299009, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_08jpk")
theme_override_font_sizes/font_size = 21
text = "Main Menu"

[node name="Quit" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Quit_Btn" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer/Quit"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_u8tnp")
texture_pressed = SubResource("AtlasTexture_stj27")
ignore_texture_size = true
stretch_mode = 0

[node name="Label4" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Quit"]
layout_mode = 2
theme_override_colors/font_color = Color(0.905882, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_08jpk")
theme_override_font_sizes/font_size = 21
text = "Quit Game"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Restart/Restart_Btn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Main Menu/Main_Menu_Btn" to="." method="_on_main_menu_btn_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Quit/Quit_Btn" to="." method="_on_quit_btn_pressed"]
